<resources>
    <string name="app_name">ExamenMonitor</string>
    <string name="Hold_your_card_against_the_reader_to_scan">Hold your card against the reader to scan</string>
    <string name="Scan">Scan</string>
    <string name="add_user_title">Voeg een student toe</string>
    <string name="name_placeholder">Naam</string>
    <string name="lastname_placeholder">Achternaam</string>
    <string name="s_number_placeholder">Student nummer</string>
    <string name="name_required"> naam is verplicht </string>
    <string name="exam_name_required"> Examen naam is verplicht </string>
    <string name="last_name_required"> achternaam is verplicht </string>
    <string name="studentnumber_required"> studenten nummer is verplicht </string>
    <string name="add_user">VOEG TOE</string>
    <string name="scan_card_first">Scan eerst de studenten kaart</string>
    <string name="button_add_user">Add user</string>
    <string name="label_add_user">Users</string>
    <string name="add_user_subtext">Voeg een student toe</string>
    <string name="title_activity_students_list">Students</string>
    <string name="button_student_list">Studenten lijst</string>
    <string name="student_list_subtext">Toon de lijst met studenten</string>
    <string name="button_new_exam">Nieuw examen</string>
    <string name="new_exam_subtext">Start een nieuw examen</string>
    <string name="new_exam_title">Nieuw examen</string>
    <string name="exam">Examen</string>
    <string name="button_create_exam">CreËer het examen</string>
    <string name="button_my_exams">Mijn examens</string>
    <string name="my_exams_subtext">Toon mijn examens</string>
    <string name="title_activity_my_exams">My Exams</string>
    <string name="action_settings">Settings</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="no_exams_textview">Je hebt nog geen examens aangemaakt</string>
    <string name="checkout">Check in/out</string>
    <string name="unknown_student_message">Deze student is onbekend</string>
    <string name="scan_student_card_to_register">Scan uw studentenkaart om te registreren</string>
</resources>
